syntax = "proto3";
import "generator/proto/nanopb.proto";
import "generator/proto/google/protobuf/any.proto";

package test;

// Example messages that can be payloads
message LoginRequest {
    string username = 1 [(nanopb).max_length = 32];
    string password = 2 [(nanopb).max_length = 64];
}

message LogoutRequest {
    string session_id = 1 [(nanopb).max_length = 64];
}

message ChatMessage {
    string content = 1 [(nanopb).max_length = 256];
    uint32 timestamp = 2;
}

// Envelope message using google.protobuf.Any
message BaseMessage {
    uint32 message_id = 1;
    google.protobuf.Any payload = 2;
    uint64 timestamp = 3;
}
